Fix spacing between links

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ html, body {
     border: 1px solid black;
     width: 50%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+}
+
+.link {
+    margin-left: 20px;
 }
 
